Fixed bug #51242 (Empty mysql.default_port does not default to 3306 anymore, but 0).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@295982 c90b9560-bf6c-de11-be94-00142212c4b1